# soundshouter

./: .gitignore  Makefile  README.md  pyproject.toml
soundshouter/: .gitignore  Cargo.toml  diesel.toml
soundshouter-vite-webapp/: package-lock.json  package.json  tailwind.config.js  vite.config.js
soundshouter-vite-webapp/src/: App.vue  Appsave.vue  style.css
soundshouter-vite-webapp/src/components/: Footer.vue  NavBar.vue  SideBar.vue  SideBarElement.vue  SoundElement.vue  SoundTable.vue  SubCatElement.vue
soundshouter-vite-webapp/src/js/: axios.js  data.js
soundshouter-webapp/: Cargo.toml  index.html
soundshouter-webapp/src/: api.rs  main.rs  ui.rs
soundshouter-webapp/src/api/: models.rs
soundshouter-webapp/src/css/: main.css
soundshouter-webapp/src/ui/: nav.rs  sound.rs
soundshouter/gui/: api_settings.yml  shouterGUI.py
soundshouter/lib/: api_models.py  db.py  index.py  settings.py
soundshouter/migrations/2024-06-05-220913_create_schema/: down.sql  up.sql
soundshouter/server/: main.py
soundshouter/src/: api.rs  audio_player.rs  broker.rs  cli.rs  config.rs  db.rs  error.rs  gui.rs  import.rs  main.rs  schema.rs
soundshouter/src/db/: models.rs
