[tool.poetry]
name = "soundshouter"
version = "0.1.0"
description = ""
authors = ["jodergrosse <j.gross@live.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
iotcore = "^0.3.0"
pydub = "^0.25.1"
click = "^8.1.7"
sqlalchemy = { version=">2.0", extras=["asyncio"]}
aiosqlite = "^0.19.0"
faststream = "^0.3.8"
aio-pika = "^9.3.1"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
customtkinter = "^5.2.1"
packaging = "^23.2"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
soundshouter = 'soundshouter.bin.soundshouter:main'
gui = 'soundshouter.gui.shouterGUI:main'
