[package]
name = "soundshouter-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
serde_json = "1.0.108"
serde = "1.0.193"
reqwest = { version = "0.11.23", features = ["blocking"] }
leptos_query = {  version = "0.3.0", features = ["hydrate"] }
