[package]
name = "soundshouter"
version = "0.1.0"
edition = "2021"

[dependencies]
# __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
eframe = { version = "0.27.2", features = ["default", "__screenshot"], optional = true }

# For image support:
egui_extras = { version = "0.27.2", features = ["default", "image"], optional = true }
ehttp = { version = "0.5.0", optional = true}

rocket = { version = "0.5.1", features = ["json"]}
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
rumqttd = "0.19.0"
rumqttc = "0.24.0"
config = "0.14.0"
rodio = "0.20.1"
tokio = "1.38.0"
diesel = { version = "2.2.1", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
log = "0.4.22"
serde = "1.0.203"
utoipa = { version = "4.2.3" } #, features = ["rocket_extras"]} #, features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"] }
directories = "5.0.1"
clap = "4.5.4"
toml = "0.8.13"
diesel_migrations = "2.2.0"
# wird von der api verwendet
serde_json = "1.0.133"
log4rs = "1.3.0"

[features]
gui = ["dep:eframe", "dep:egui_extras", "dep:ehttp"]
